# popcorn-hero

./: .env.example  .gitignore  README.md  biome.json  copilot-instructions.md  package.json  pnpm-lock.yaml  popcorn-hero.config.js  svelte.config.js  vite.config.js
.github/workflows/: build.yml
messages/: de.json  en.json  fr.json  it.json  ja.json
project.inlang/: project_id  settings.json
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  media.rs  metadata.rs  peer.rs  player.rs  user.rs  watcher.rs
src/lib/components/app/: language-switcher.svelte  media-card.svelte  media-hero.svelte  media-row.svelte  navbar.svelte  user-create-form.svelte  user-login-form.svelte
src/lib/components/dev/: dev-toolbar.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/switch/: switch.svelte
src/lib/helpers/: media.ts
src/lib/stores/: peers.ts  user.ts
src/lib/types/: media.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/account/: +page.svelte
src/routes/connect/: +page.svelte
src/routes/movies/: +page.svelte
src/routes/series/: +page.svelte
src/routes/settings/: +page.svelte
