[package]
name = "popcorn-hero"
version = "0.1.0"
description = "Discover and share your favorite movies with yours friends!"
authors = ["devbit.me"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "popcorn_hero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
log = "0.4"
chrono = "0.4"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"
notify = "7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1"
iroh = { version = "0.96", default-features = false }
iroh-ping = "0.8"
iroh-tickets = "0.3"
tokio = { version = "1", features = ["full"] }

